# Parabolic-Solar-Tracker

./: CMakeLists.txt  README.md
project/include/: CMakeLists.txt  IDateTime.h  IGPSSensor.h  IMUSensor.h  ISensor.h  IWeather.h  Point.h
project/include/SPALibs/: SPALib.cpp  SPALib.h
project/include/WMMLibs/: CMakeLists.txt  WMMLib.cpp  WMMLib.h
project/src/: CMakeLists.txt  main.cpp
solar-tracker/app/: Dockerfile
solar-tracker/app/spa/: spa.h
wmm2025_Linux/: Makefile  STM32F746NGH_FLASH.ld  TestInputPara.txt  WMM_Readme.txt  startup_stm32f746xx.s
wmm2025_Linux/data/: sample_coords.txt
wmm2025_Linux/main/: app.c
wmm2025_Linux/src/: GeomagInterativeLib.h  GeomagnetismHeader.h  version.h
